--- a/assets/html/footer.html
+++ b/assets/html/footer.html
@@ -1,5 +1,18 @@
 <footer>
-    <p>Bergman ross and partners footer</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-4 offset-2">
+                <p>Head Office: N1 City Hospital,<br> Louwtjie Rothman Avenue,<br> Goodwood Avenue, 7460 <br>Tel: 021 595 1370
+                </p>
+            </div>
+            <div class="col-4 offset-2">
+                <h5>Follow us:</h5>
+                <a href="/" target="_blank" class="badge social facebook"><i class="fa fa-facebook"></i></a>
+                <a href="/" target="_blank" class="badge social linkedin"><i class="fa fa-linkedin"></i></a>
+            </div>
+        </div>
+
+    </div>
     <!-- end container -->
 </footer>
 
