new pages added

--- a/assets/html/footer.html
+++ b/assets/html/footer.html
@@ -1,11 +1,11 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-4 offset-2">
+            <div class="col-10 col-md-4 offset-2">
                 <p>Head Office: N1 City Hospital,<br> Louwtjie Rothman Avenue,<br> Goodwood Avenue, 7460 <br>Tel: 021 595 1370
                 </p>
             </div>
-            <div class="col-4 offset-2">
+            <div class="col-10 col-md-4 offset-2">
                 <h5>Follow us:</h5>
                 <a href="/" target="_blank" class="badge social facebook"><i class="fa fa-facebook"></i></a>
                 <a href="/" target="_blank" class="badge social linkedin"><i class="fa fa-linkedin"></i></a>
